+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 3.0a3?
===========================

*Release date: XX-XXX-2008*

Core and Builtins
-----------------

- Object/longobject.c: long(float('nan')) raises an OverflowError instead
  of returning 0.

- Issue #1762972: __file__ points to the source file instead of the pyc/pyo
  file if the py file exists.

- Issue #1393: object_richcompare() returns NotImplemented instead of
  False if the objects aren't equal, to give the other side a chance.

- Issue #1692: Interpreter was not displaying location of SyntaxError.

- Improve some exception messages when Windows fails to load an extension
  module. Now we get for example '%1 is not a valid Win32 application' instead
  of 'error code 193'.  Also use Unicode strings to deal with non-English
  locales.

- Issue #1587: Added instancemethod wrapper for PyCFunctions. The Python C API
  has gained a new type *PyInstanceMethod_Type* and the functions
  *PyInstanceMethod_Check(o)*, *PyInstanceMethod_New(func)* and
  *PyInstanceMethod_Function(im)*.

- Constants gc.DEBUG_OBJECT and gc.DEBUG_INSTANCE have been removed from the
  gc module; gc.DEBUG_COLLECTABLE or gc.DEBUG_UNCOLLECTABLE are now enough to
  print the corresponding list of objects considered by the garbage collector.

- Issue #1580: New free format floating point representation based on 
  "Floating-Point Printer Sample Code", by Robert G. Burger. For example
  repr(11./5) now returns '2.2' instead of '2.2000000000000002'.

- Issue #1573: Improper use of the keyword-only syntax makes the parser crash.

- Issue #1564: The set implementation should special-case PyUnicode instead
  of PyString.


Extension Modules
-----------------

- Issue #1762972: Readded the reload() function as imp.reload()


Library
-------

- Issue #1703: getpass() should flush after writing prompt.

- Issue #1585: IDLE uses non-existent xrange() function.
